tests/fail/registering/dummy variable with a pure sort.mmu
(sort s   strict   ) 
(term a ((x s ())) (s ())) 
